src/utils/snapshots/sentry_cli__utils__vcs__tests__generate_patch_default_twenty.snap
---
source: src/utils/vcs.rs
expression: patch_set
---
- patch_set:
    - path: foo2.js
      type: M
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"final commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo19.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo18.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo17.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo16.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo15.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo14.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo13.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo12.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo11.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo10.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo9.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo8.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo7.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo6.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo5.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo4.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo3.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo2.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
- patch_set:
    - path: foo1.js
      type: A
  repository: example/test-repo
  author_name: John Doe
  author_email: john.doe@example.com
  timestamp: "[timestamp]"
  message: "\"another commit\"\n"
  id: "[id]"
