src/utils/snapshots/sentry_cli__utils__vcs__tests__get_commits_from_git.snap
---
source: src/utils/vcs.rs
expression: "commits.0.iter().map(|c|\n{\n    (c.author().name().unwrap().to_owned(),\n    c.author().email().unwrap().to_owned(), c.summary(),)\n}).collect::<Vec<_>>()"
---
[
    (
        "John Doe",
        "john.doe@example.com",
        Some(
            "\"second commit\"",
        ),
    ),
    (
        "John Doe",
        "john.doe@example.com",
        Some(
            "\"initial commit\"",
        ),
    ),
]
